--- a/IML/project_1/models.ipynb
+++ b/IML/project_1/models.ipynb
@@ -16,9 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.metrics import mean_squared_error"
    ]
@@ -46,9 +44,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ids = np.random.permutation(X.shape[0])\n",
-    "X_shuffled = X[ids, :]\n",
-    "y_shuffled = y[ids]"
+    "index = np.random.permutation(X.shape[0])\n",
+    "X_transformed = X[index, :]\n",
+    "y_transformed = y[index]"
    ]
   },
   {
@@ -64,25 +62,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lambdas = [0.1, 1, 10, 100, 200]\n",
-    "n_folds = 10\n",
+    "alphas = [0.1, 1, 10, 100, 200]\n",
+    "no_folds = 10\n",
+    "partition_length = len(index) // no_folds\n",
     "\n",
-    "avg_rmse = list()\n",
-    "for alpha in lambdas:\n",
-    "    avg_rmse_lambda = list()\n",
-    "    for i in range(n_folds):\n",
-    "        clf = Ridge(alpha=alpha)\n",
-    "        s = len(ids)//n_folds\n",
-    "        fold_ids = ids[i*s:i*s+s]\n",
-    "        X_train = np.delete(X_shuffled, fold_ids, axis=0)\n",
-    "        X_val = X_shuffled[fold_ids]\n",
-    "        y_train = np.delete(y_shuffled, fold_ids)\n",
-    "        y_val = y_shuffled[fold_ids]\n",
-    "        clf.fit(X_train, y_train)\n",
-    "        preds_val = clf.predict(X_val)\n",
-    "        rmse = mean_squared_error(y_val, preds_val)**0.5\n",
-    "        avg_rmse_lambda.append(rmse)\n",
-    "    avg_rmse.append(np.mean(avg_rmse_lambda))"
+    "# manual cross-validation\n",
+    "def rmse_cv(alpha):\n",
+    "    rmse = list()\n",
+    "    for k in range(no_folds):\n",
+    "        ridge = Ridge(alpha=alpha)\n",
+    "        indexes = index[k*partition_length : k*partition_length + partition_length]\n",
+    "        X_test = X_transformed[indexes]\n",
+    "        y_test = y_transformed[indexes]\n",
+    "        X_train = np.delete(X_transformed, indexes, axis=0)\n",
+    "        y_train = np.delete(y_transformed, indexes)\n",
+    "        model = ridge.fit(X_train, y_train)\n",
+    "        y_hat = model.predict(X_test)\n",
+    "        rmse.append(mean_squared_error(y_test, y_hat) ** 0.5)\n",
+    "    return np.mean(rmse) # cv score per alpha\n"
    ]
   },
   {
@@ -91,8 +88,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(avg_rmse)\n",
-    "plt.plot(avg_rmse)"
+    "rmse_list = list()\n",
+    "for alpha in alphas:\n",
+    "    avg_rmse = rmse_cv(alpha)\n",
+    "    rmse_list.append(avg_rmse)"
    ]
   },
   {
@@ -108,8 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "df = pd.DataFrame(avg_rmse, columns=['y'])\n",
+    "df = pd.DataFrame(rmse_list, columns=['y'])\n",
     "df.to_csv('data/test_preds.csv', index=False, header=False)"
    ]
   }
