--- a/IML/project_4/pickler.ipynb
+++ b/IML/project_4/pickler.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save(\"data/X.npy\", X)\n",
-    "np.save(\"data/y.npy\", y)\n",
+    "np.save(\"data/X.npy\", X) # X_train\n",
+    "np.save(\"data/y.npy\", y) # y_train\n",
     "np.save(\"data/X_test.npy\", X_test)"
    ]
   }
