--- a/IML/project_0/models.ipynb
+++ b/IML/project_0/models.ipynb
@@ -7,20 +7,11 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.random.seed(2049)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "np.random.seed(2049)"
    ]
   },
   {
@@ -126,7 +117,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "df = pd.DataFrame(predictions, columns=['Id', 'y'])\n",
     "df = df.astype({'Id': 'int32'})\n",
     "df.to_csv('data/test_preds.csv', index=False)"
