--- a/IML/project_1/models.ipynb
+++ b/IML/project_1/models.ipynb
@@ -7,18 +7,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.random.seed(2049)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import pandas as pd\n",
     "from sklearn.linear_model import Ridge\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from sklearn.metrics import mean_squared_error\n",
+    "np.random.seed(2049)"
    ]
   },
   {
