--- a/IML/project_2/models.ipynb
+++ b/IML/project_2/models.ipynb
@@ -7,21 +7,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.random.seed(2049)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import Ridge, Lasso, BayesianRidge\n",
+    "import pandas as pd\n",
+    "from sklearn.linear_model import Ridge, Lasso\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.metrics import mean_squared_error"
+    "np.random.seed(2049)"
    ]
   },
   {
@@ -100,7 +89,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "df = pd.DataFrame(weights, columns=['y'])\n",
     "df.to_csv('data/results.csv', index=False, header=False)"
    ]
