--- a/IML/project_3/models.ipynb
+++ b/IML/project_3/models.ipynb
@@ -7,23 +7,14 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.random.seed(2049)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import pandas as pd\n",
     "import zipfile\n",
-    "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import r2_score\n",
-    "from sklearn.model_selection import GridSearchCV, cross_validate\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.multioutput import MultiOutputClassifier, MultiOutputRegressor\n",
-    "from sklearn.ensemble import GradientBoostingClassifier, GradientBoostingRegressor"
+    "from sklearn.ensemble import GradientBoostingClassifier, GradientBoostingRegressor\n",
+    "np.random.seed(2049)"
    ]
   },
   {
@@ -44,15 +35,6 @@
     "X_test = np.load(\"data/X_test_processed.npy\")\n",
     "test_idx, X_test = X_test[:, 0], X_test[:, 1:]\n",
     "y = np.load(\"data/y.npy\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(X.shape, y.shape)"
    ]
   },
   {
@@ -89,15 +71,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(X_train.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "r = GradientBoostingClassifier(n_estimators=50, max_depth=5, random_state=2049)\n",
     "clf = MultiOutputClassifier(r, n_jobs=-1)\n",
     "clf.fit(X_train, y1_train)"
@@ -112,16 +85,6 @@
     "train_preds = np.array(clf.predict_proba(X_train))[:, :, 1].T\n",
     "val_preds = np.array(clf.predict_proba(X_val))[:, :, 1].T\n",
     "test_preds1 = np.array(clf.predict_proba(X_test))[:, :, 1].T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(val_preds.shape, y1_val.shape)\n",
-    "print(val_preds[:3, :4])"
    ]
   },
   {
@@ -162,15 +125,6 @@
    "outputs": [],
    "source": [
     "X_train, X_val, y2_train, y2_val = train_test_split(X, y_2, test_size=0.2, random_state=2049)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(y2_val.shape, val_preds.shape)"
    ]
   },
   {
@@ -229,8 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_val, y3_train, y3_val = train_test_split(\n",
-    "    X, y_3, test_size=0.2, random_state=2049)"
+    "X_train, X_val, y3_train, y3_val = train_test_split(X, y_3, test_size=0.2, random_state=2049)"
    ]
   },
   {
@@ -295,18 +248,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "temp_df = pd.read_csv('data/train_labels.csv', delimiter=',')\n",
     "colnames = temp_df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(colnames.shape, test_preds.shape)"
    ]
   },
   {
