--- a/IML/project_3/pickler.ipynb
+++ b/IML/project_3/pickler.ipynb
@@ -42,7 +42,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -56,7 +56,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "39b5c16b68b67ba22346ef6d698bf62f4f1e91a475e577be2818f6d4b05b72b5"
+   }
   }
  },
  "nbformat": 4,
