--- a/IML/project_3/preprocessing.ipynb
+++ b/IML/project_3/preprocessing.ipynb
@@ -7,20 +7,9 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.random.seed(2049)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import StandardScaler"
+    "from sklearn.preprocessing import StandardScaler\n",
+    "np.random.seed(2049)"
    ]
   },
   {
@@ -152,15 +141,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(train_features[:2, :4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "X_train_processed = train_features\n",
     "X_test_processed = test_features"
    ]
@@ -186,7 +166,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -200,7 +180,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "39b5c16b68b67ba22346ef6d698bf62f4f1e91a475e577be2818f6d4b05b72b5"
+   }
   }
  },
  "nbformat": 4,
