--- a/IML/project_4/models.ipynb
+++ b/IML/project_4/models.ipynb
@@ -7,24 +7,13 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.random.seed(2049)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "import xgboost as xgb"
+    "import xgboost as xgb\n",
+    "np.random.seed(2049)"
    ]
   },
   {
@@ -62,15 +51,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train.shape[0] + X_val.shape[0]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -98,8 +78,15 @@
    "source": [
     "weight_for_0 = (1 / inactive)*(total)/2.0 \n",
     "weight_for_1 = (1 / active)*(total)/2.0\n",
-    "\n",
-    "class_weight = {0: weight_for_0, 1: weight_for_1}"
+    "class_weight = {0: weight_for_0, 1: weight_for_1}\n",
+    "class_weight"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### RFs"
    ]
   },
   {
@@ -108,7 +95,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class_weight"
+    "# params = {'n_estimators': [50, 100, 500],\n",
+    "#           'max_depth': [4, 5, 7]\n",
+    "#          }\n",
+    "\n",
+    "# rf = RandomForestClassifier(random_state=2049, class_weight=class_weight)\n",
+    "# gcv = GridSearchCV(rf, param_grid=params, n_jobs=1, verbose = 15, scoring='f1')\n",
+    "# gcv.fit(X_train, y_train)\n",
+    "\n",
+    "# rf_best = RandomForestClassifier(**gcv.best_params_, random_state=2049, class_weight=class_weight)\n",
+    "# rf.fit(X_train, y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preds_train = rf.predict(X_train)\n",
+    "# preds_val = rf.predict(X_val)\n",
+    "# preds_test = rf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# print(f\"Train F1: {f1_score(y_train, preds_train)}\")\n",
+    "# print(f\"Val F1: {f1_score(y_val, preds_val)}\")"
    ]
   },
   {
@@ -125,7 +142,8 @@
    "outputs": [],
    "source": [
     "# class imbalance \n",
-    "scale_pos_weight = np.sqrt(inactive/active) "
+    "scale_pos_weight = np.sqrt(inactive/active) \n",
+    "scale_pos_weight"
    ]
   },
   {
@@ -212,7 +230,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "df = pd.DataFrame(preds_test, columns=['y'])\n",
     "df = df.astype({'y': 'int32'})\n",
     "df.to_csv('data/test_preds.csv', index=False, header=False)"
@@ -221,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -236,6 +253,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "39b5c16b68b67ba22346ef6d698bf62f4f1e91a475e577be2818f6d4b05b72b5"
+   }
   }
  },
  "nbformat": 4,
