--- a/IML/project_4/preprocessing.ipynb
+++ b/IML/project_4/preprocessing.ipynb
@@ -7,19 +7,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from sklearn.preprocessing import MultiLabelBinarizer\n",
     "np.random.seed(2049)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import OneHotEncoder, MultiLabelBinarizer"
    ]
   },
   {
