--- a/IML/project_5/SiameseNet.ipynb
+++ b/IML/project_5/SiameseNet.ipynb
@@ -302,6 +302,7 @@
     "    return [food_emb[triplet_indices[0]], food_emb[triplet_indices[1]], food_emb[triplet_indices[2]]]\n",
     "\n",
     "def get_triplet_images_flip(triplet_indices):\n",
+    "    # TODO: fix the below since this function is actually used later on\n",
     "    return [food_flip_emb[triplet_indices[0]], food_flip_emb[triplet_indices[1]], food_flip_emb[triplet_indices[2]]]"
    ]
   },
@@ -726,7 +727,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.7 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -741,6 +742,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "39b5c16b68b67ba22346ef6d698bf62f4f1e91a475e577be2818f6d4b05b72b5"
+   }
   }
  },
  "nbformat": 4,
