--- a/AML/Project 3/Task3.ipynb
+++ b/AML/Project 3/Task3.ipynb
@@ -17,21 +17,21 @@
     "import random\n",
     "import cv2 as cv\n",
     "import numpy as np\n",
-    "from collections import defaultdict\n",
     "import matplotlib.pyplot as plt\n",
+    "from collections import defaultdict\n",
     "\n",
     "import torch\n",
-    "from torch import nn\n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
+    "from torch import nn\n",
     "from torch.autograd import Variable\n",
     "from torch.optim.lr_scheduler import StepLR\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
     "import torchvision\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "import torchvision.transforms.functional as TF\n",
     "from torchvision import transforms, utils\n",
     "from torchvision.io import read_image\n",
-    "import torchvision.transforms.functional as TF\n",
     "\n",
     "from skimage.transform import resize\n",
     "from skimage import exposure\n",
@@ -45,6 +45,7 @@
     "from albumentations.augmentations import CenterCrop\n",
     "from albumentations.core.composition import Compose, OneOf\n",
     "from albumentations.augmentations import Rotate\n",
+    "from albumentations.augmentations.geometric.transforms import Affine\n",
     "\n",
     "import pickle\n",
     "import gzip\n",
@@ -77,7 +78,7 @@
    "source": [
     "# parameters\n",
     "TRAINING = True\n",
-    "MAX_EPOCH = 100\n",
+    "MAX_EPOCH = 100 # HERE 40\n",
     "IMG_SIZE = 128\n",
     "BATCH_SIZE = 10"
    ]
@@ -184,7 +185,19 @@
     "        angle = self.angles\n",
     "        return TF.rotate(x, angle)\n",
     "\n",
-    "rotation_transform = RotationTransform(angles=15)"
+    "rotation_transform = RotationTransform(angles=15)\n",
+    "\n",
+    "\n",
+    "class AddGaussianNoise(object):\n",
+    "    def __init__(self, mean=0., std=1.):\n",
+    "        self.std = std\n",
+    "        self.mean = mean\n",
+    "        \n",
+    "    def __call__(self, tensor):\n",
+    "        return tensor + torch.abs((torch.randn(tensor.size()) * self.std + self.mean)/10.)\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return self.__class__.__name__ + '(mean={0}, std={1})'.format(self.mean, self.std)"
    ]
   },
   {
@@ -216,46 +229,58 @@
     "        label = self.img_labels[idx]\n",
     "        \n",
     "        if self.augmentation:\n",
-    "            transf = transforms.Compose([transforms.ToTensor(),\n",
-    "                                         transforms.CenterCrop(image.shape[0]),\n",
-    "                                         transforms.Resize(IMG_SIZE, interpolation=Image.NEAREST),\n",
-    "                                         transforms.RandomChoice([\n",
-    "                                             RotationTransform(angles=0),\n",
-    "                                             RotationTransform(angles=5),\n",
-    "                                             RotationTransform(angles=-5),\n",
-    "                                             RotationTransform(angles=10),\n",
-    "                                             RotationTransform(angles=-10)\n",
-    "                                             ])\n",
-    "                                         ])\n",
-    "            transf_album = Compose([\n",
+    "            transf_img = transforms.Compose([AddGaussianNoise()])\n",
+    "            \n",
+    "            transf_img_alb = Compose([\n",
     "                                    OneOf([\n",
-    "                                             RandomBrightness(limit=0.2),\n",
-    "                                             RandomContrast(limit=0.2),\n",
-    "                                             CLAHE(clip_limit=4.0)\n",
+    "                                               RandomBrightness(limit=0.3),\n",
+    "                                               RandomContrast(limit=0.4)\n",
     "                                           ], p=1)])\n",
     "            \n",
+    "            transf_img_alb_mask = Compose([\n",
+    "                                        OneOf([\n",
+    "                                                Affine(shear=1)\n",
+    "                                               ], p=1)])\n",
     "            \n",
-    "            \n",
-    "        \n",
+    "            transf = transforms.Compose([transforms.ToTensor(),\n",
+    "                                        transforms.CenterCrop(image.shape[0]),\n",
+    "                                        transforms.Resize(IMG_SIZE, interpolation=Image.NEAREST),\n",
+    "                                           transforms.RandomChoice([\n",
+    "                                               RotationTransform(angles=0),\n",
+    "                                               RotationTransform(angles=5),\n",
+    "                                               RotationTransform(angles=-5),\n",
+    "                                               RotationTransform(angles=10),\n",
+    "                                               RotationTransform(angles=-10),\n",
+    "                                               transforms.RandomAffine(degrees=(0, 0), shear=(10, 10)),\n",
+    "                                               transforms.RandomAffine(degrees=(0, 0), shear=(-10, -10))\n",
+    "                                           ])\n",
+    "                                         ])\n",
+    "\n",
     "        else:\n",
-    "            transf = transforms.Compose([ \n",
-    "                                 transforms.ToTensor(),\n",
-    "                                 transforms.CenterCrop(image.shape[0]),\n",
-    "                                 transforms.Resize(IMG_SIZE, interpolation=Image.NEAREST)\n",
-    "                                 ])\n",
+    "            transf = transforms.Compose([transforms.ToTensor(),\n",
+    "                                           transforms.CenterCrop(image.shape[0]),\n",
+    "                                           transforms.Resize(IMG_SIZE, interpolation=Image.NEAREST)\n",
+    "                                         ])\n",
     "        \n",
-    "        # such that both image and label are transformed\n",
+    "        \n",
     "        stacked = np.dstack([image, label])\n",
-    "        stack = transf(stacked)\n",
-    "        img, label = torch.chunk(stack, chunks=2, dim=0)\n",
-    "        \n",
+    "        stacked = transf(stacked)\n",
+    "        img, label = torch.chunk(stacked, chunks=2, dim=0)\n",
+    "            \n",
     "        if self.augmentation:\n",
-    "            img_numpy = img.cpu().detach().numpy()\n",
-    "            img_numpy = (img_numpy * 255.).astype(int)\n",
-    "            img_numpy = img_numpy.astype('uint8')\n",
-    "            alb_img = transf_album(image=img_numpy)\n",
-    "            img = torch.tensor(alb_img['image'])\n",
-    "                     \n",
+    "            \n",
+    "            img = img.cpu().detach().numpy()\n",
+    "            img = transf_img_alb(image=img)\n",
+    "            img = torch.tensor(img['image'])\n",
+    "            \n",
+    "            img = transf_img(img)\n",
+    "            \n",
+    "            #print(\"-\"*20)\n",
+    "            \n",
+    "            img[img > 1.] = 1\n",
+    "            img[img < 0.] = 0\n",
+    "            \n",
+    "        \n",
     "        video_name = self.name[idx]\n",
     "        return img, label.bool().float(), video_name"
    ]
@@ -310,7 +335,8 @@
     "f, axarr = plt.subplots(1, 3, figsize=(15, 3))\n",
     "axarr[0].imshow(img, cmap='gray')\n",
     "axarr[1].imshow(img_m, cmap='gray')\n",
-    "axarr[2].imshow(img_merge, cmap='gray')"
+    "axarr[2].imshow(img_merge, cmap='gray')\n",
+    "plt.show()"
    ]
   },
   {
@@ -504,7 +530,7 @@
     "\n",
     "            loss_bce = criterion(outputs, labels)\n",
     "            loss_iou = iou_score(outputs, labels)\n",
-    "            loss = loss_bce * 0.5 + loss_iou * 0.5\n",
+    "            loss = loss_bce * 0.5 + (iou_score * -0.5 + 0.5)\n",
     "            loss.backward()\n",
     "\n",
     "            optimizer.step()\n",
@@ -542,7 +568,7 @@
     "            # save model\n",
     "            torch.save(model.state_dict(), 'unet_min.pth')\n",
     "            \n",
-    "        if epoch % 25 == 0 and epoch > 0:\n",
+    "        if epoch % 5 == 0 and epoch > 0:\n",
     "            torch.save(model.state_dict(), 'unet_' + str(epoch) + '.pth')\n",
     "\n",
     "    \n",
@@ -612,7 +638,7 @@
     "        axarr[1].imshow(mask_aux[test_ind]['label'].detach().numpy().squeeze(0).squeeze(0), cmap='gray')\n",
     "        plt.show()\n",
     "\n",
-    "net_name_to_test = 'unet_75.pth'\n",
+    "net_name_to_test = 'unet_25.pth'\n",
     "val_mask, val_mask_aux = test_net(val_dataloader_for_eval, net_name_to_test)\n",
     "train_mask, train_mask_aux = test_net(train_dataloader_for_eval, net_name_to_test)\n",
     "sub_mask, sub_mask_aux = test_net(test_dataloader_for_submission, net_name_to_test)"
