--- a/IML/project_5/model.ipynb
+++ b/IML/project_5/model.ipynb
@@ -10,7 +10,6 @@
     "\n",
     "import os\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = '-1'\n",
-    "\n",
     "my_seed = 1508\n",
     "\n",
     "import numpy as np\n",
@@ -20,8 +19,7 @@
     "import tensorflow as tf\n",
     "tf.random.set_seed(my_seed)\n",
     "\n",
-    "from keras.preprocessing.image import load_img\n",
-    "from keras.preprocessing.image import img_to_array\n",
+    "from keras.preprocessing.image import load_img, img_to_array\n",
     "from keras.layers import Dense, Flatten, Input, Dropout, Activation, Conv2D, MaxPool2D\n",
     "from keras.layers.normalization import BatchNormalization\n",
     "from keras.models import Sequential, Model, load_model\n",
@@ -220,7 +218,6 @@
     "\n",
     "m_shape = pretrained_model.layers[-1].output_shape\n",
     "\n",
-    "# pretrained_model.summary()\n",
     "print(m_shape)"
    ]
   },
@@ -302,7 +299,6 @@
     "    return [food_emb[triplet_indices[0]], food_emb[triplet_indices[1]], food_emb[triplet_indices[2]]]\n",
     "\n",
     "def get_triplet_images_flip(triplet_indices):\n",
-    "    # TODO: fix the below since this function is actually used later on\n",
     "    return [food_flip_emb[triplet_indices[0]], food_flip_emb[triplet_indices[1]], food_flip_emb[triplet_indices[2]]]"
    ]
   },
