--- a/AML/Project 3/Task3.ipynb
+++ b/AML/Project 3/Task3.ipynb
@@ -78,7 +78,7 @@
    "source": [
     "# parameters\n",
     "TRAINING = True\n",
-    "MAX_EPOCH = 100 # HERE 40\n",
+    "MAX_EPOCH = 40\n",
     "IMG_SIZE = 128\n",
     "BATCH_SIZE = 10"
    ]
